--- a/.github/workflows/codacy.yml
+++ b/.github/workflows/codacy.yml
@@ -2,14 +2,22 @@ name: Codacy Security Scan
 
 on:
   push:
-    branches: [ "master", "main" ]
+    branches: [ "main" ]
   pull_request:
-    branches: [ "master", "main" ]
+    branches: [ "main" ]
+
+permissions:
+  contents: read
 
 jobs:
   codacy-security-scan:
     runs-on: ubuntu-latest
-    
+
+    permissions:
+      contents: read
+      security-events: write
+      actions: read
+
     steps:
       - name: Checkout code
         uses: actions/checkout@main
@@ -17,12 +25,14 @@ jobs:
       - name: Run Codacy Analysis CLI
         uses: codacy/codacy-analysis-cli-action@master
         with:
+          project-token: ${{ secrets.CODACY_PROJECT_TOKEN }}
+          verbose: true
           output: results.sarif
           format: sarif
           gh-code-scanning-compat: true
           max-allowed-issues: 2147483647
       
       - name: Upload SARIF results file
-        uses: github/codeql-action/upload-sarif@main
+        uses: github/codeql-action/upload-sarif@v3
         with:
           sarif_file: results.sarif
