--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -7,8 +7,11 @@ on:
 
 jobs:
   pylint:
-    build:
-      runs-on: ubuntu-latest
+    runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        python-version: [3.9]
 
     steps:
       - name: Checkout code
@@ -17,7 +20,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.9'
+          python-version: ${{ matrix.python-version }}
 
       - name: Install dependencies
         run: |
